<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home.Activity.MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userProfileIv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"/>

    <RelativeLayout
        android:id="@+id/userNameLayout"
        android:layout_below="@+id/userProfileIv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/nameTagTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/theme"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/titleTv"
            android:layout_toEndOf="@+id/nameTagTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/usernameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/titleTv"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/userEmailLayout"
        android:layout_below="@+id/userNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/emailTagTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/theme"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/emailTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toEndOf="@+id/emailTagTv"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/userGenderLayout"
        android:layout_below="@+id/userEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/genderTagTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/theme"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/genderTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toEndOf="@+id/genderTagTv"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/userDobLayout"
        android:layout_below="@+id/userGenderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/dobTagTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dob"
            android:textColor="@color/theme"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dobTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toEndOf="@+id/dobTagTv"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/userAddressLayout"
        android:layout_below="@+id/userDobLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/addressTagTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/theme"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/addressTv"
            android:layout_toEndOf="@+id/addressTagTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/userMobileNoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userAddressLayout"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/mobileNoTagTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobileNo"
            android:textColor="@color/theme"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mobileNoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toEndOf="@+id/mobileNoTagTv" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/actionBtnLayout"
        android:layout_below="@+id/userMobileNoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="gone"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/showMapBtn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:layout_toRightOf="@+id/backBtn"
            android:background="@drawable/button"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/map"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextBtn"
            android:layout_toRightOf="@+id/showMapBtn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:background="@drawable/button"
            android:text="@string/next"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_margin="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>



    </RelativeLayout>





</RelativeLayout>